--- a/src/app/category/category-modify/category-modify.component.html
+++ b/src/app/category/category-modify/category-modify.component.html
@@ -1,13 +1,12 @@
-<ng-template #noModify>
-  <div class="modal-header">
-    <h4 class="modal-title">Modificar Categoría</h4>
-  </div>
-  <div class="modal-body">
-    No se puede modificar la categoría seleccionada porque tiene productos asociados.
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="button special" (click)="closeModalAndGoBack()">Ok</button>
-  </div>
+<ng-template #cancelTemplate>
+  <app-cancel-template [modalTitle]="modalCancelTitle" [modalMessage]="modalCancelMessage" (handleOkButton)="cancel()"
+      (handleCancelButton)="closeModal()">
+  </app-cancel-template>
+</ng-template>
+
+<ng-template #errorTemplate>
+  <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
+  </app-error-template>
 </ng-template>
 
 <!-- Form -->
@@ -58,7 +57,7 @@
         <div class="12u$">
           <ul class="actions" align="center">
             <li><input [disabled]="(form.invalid || hasCategory)" type="submit" value="Aceptar" class="special" (click)="updateCategory(category)"/></li>
-            <li><input type="reset" value="Atras" (click)='onBack()' /></li>
+            <li><input (click)="showModalCancel(cancelTemplate)" type="button" value="Cancel" /></li>
           </ul>
         </div>    
       </form>
