--- a/src/app/client-account-transactions/transaction-detail/transaction-detail.component.html
+++ b/src/app/client-account-transactions/transaction-detail/transaction-detail.component.html
@@ -1,3 +1,8 @@
+<ng-template #errorTemplate>
+  <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
+  </app-error-template>
+</ng-template>
+
 <!-- Form -->
 <div *ngIf='transaction'>
   <header class="major" align="center">
