--- a/src/app/arqueo-caja/arqueo-caja-edit/arqueo-caja-edit.component.html
+++ b/src/app/arqueo-caja/arqueo-caja-edit/arqueo-caja-edit.component.html
@@ -1,3 +1,14 @@
+<ng-template #cancelTemplate>
+  <app-cancel-template [modalTitle]="modalCancelTitle" [modalMessage]="modalCancelMessage" (handleOkButton)="cancel()"
+      (handleCancelButton)="closeModal()">
+  </app-cancel-template>
+</ng-template>
+
+<ng-template #errorTemplate>
+  <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
+  </app-error-template>
+</ng-template>
+
 <!-- Form -->
 <div *ngIf='cashCount'>
   <header class="major" align="center">
@@ -105,7 +116,7 @@
         <div class="12u$">
           <ul class="actions" align="center">
             <li><input [disabled]="cashCountForm.invalid" type="submit" value="Finalizar Arqueo" class="special" (click)="updateCashCount()"/></li>
-            <li><input type="reset" value="Atras" (click)='onBack()' /></li>
+            <li><input (click)="showModalCancel(cancelTemplate)" type="button" value="Cancel" /></li>
           </ul>
         </div>    
       </form>
