--- a/src/app/cash-register/cash-register-list/cash-register-list.component.html
+++ b/src/app/cash-register/cash-register-list/cash-register-list.component.html
@@ -3,6 +3,12 @@
         (close)="closeModal()">
     </app-delete-template>
 </ng-template>
+
+<ng-template #errorTemplate>
+  <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
+  </app-error-template>
+</ng-template>
+
 <div class="row">
     <div class="col-md-6 col-lg-6 mr-0 pr-0">
         <div class="settingsTitle">
