--- a/src/app/category/category-new/category-new.component.html
+++ b/src/app/category/category-new/category-new.component.html
@@ -1,3 +1,14 @@
+<ng-template #cancelTemplate>
+  <app-cancel-template [modalTitle]="modalCancelTitle" [modalMessage]="modalCancelMessage" (handleOkButton)="cancel()"
+      (handleCancelButton)="closeModal()">
+  </app-cancel-template>
+</ng-template>
+
+<ng-template #errorTemplate>
+  <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
+  </app-error-template>
+</ng-template>
+
 <!-- Form -->
 <div class="container">
   <header class="major" align="center">
@@ -42,7 +53,7 @@
         <div class="12u$">
           <ul class="actions" align="center">
             <li><input [disabled]="(form.invalid || hasCategory)" type="submit" value="Guardar" class="special" (click)="saveCategory()"/></li>
-            <li><input type="reset" value="Atras" (click)='onBack()' /></li>
+            <li><input type="button" value="Cancelar" (click)="showModalCancel(cancelTemplate)" /></li>
           </ul>
         </div>    
       </form>
