--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -3,17 +3,11 @@
         (close)="closeModal()">
     </app-delete-template>
 </ng-template>
-<ng-template #noDeleteTemplate>
-    <div class="modal-header">
-      <h4 class="modal-title">Eliminar Producto</h4>
-    </div>
-    <div class="modal-body">
-      No se puede eliminar el producto seleccionado porque esta en algun pedido.
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="button special" (click)="closeModal()">Ok</button>
-    </div>
-  </ng-template>
+
+<ng-template #errorTemplate>
+  <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
+  </app-error-template>
+</ng-template>
 
 <div class="pageTitle">
     <div class="float-left">
