--- a/src/styles.scss
+++ b/src/styles.scss
@@ -312,6 +312,7 @@ width: 100%!important;
 .outletGeneric{
     border-left: solid 1px lightgrey;
     background-color: #f6f6f6;
+}
     
 .customFooterModal {
     background-color: #eeeeee;
