--- a/src/app/category/category-new/category-new.component.html
+++ b/src/app/category/category-new/category-new.component.html
@@ -1,4 +1,16 @@
 <!-- Form -->
+<ng-template #nameInvalid>
+  <div class="modal-header">
+    <h4 class="modal-title">Agregar Producto</h4>
+  </div>
+  <div class="modal-body">
+    Ya existe una categoria con ese nombre, elija uno diferente.
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="button special" (click)="closeModal()">Ok</button>
+    <button type="button" class="button special" (click)="closeModal()">Cancelar</button>
+  </div>
+</ng-template>
 <div class="container">
   <header class="major" align="center">
     <h2>Nueva Categoría</h2>
@@ -41,7 +53,7 @@
 
         <div class="12u$">
           <ul class="actions" align="center">
-            <li><input [disabled]="(form.invalid || hasCategory)" type="submit" value="Guardar" class="special" (click)="saveCategory()"/></li>
+            <li><input [disabled]="(form.invalid || hasCategory)" type="submit" value="Guardar" class="special" (click)="validateName()"/></li>
             <li><input type="reset" value="Atras" (click)='onBack()' /></li>
           </ul>
         </div>    
