--- a/src/app/size/size-new/size-new.component.html
+++ b/src/app/size/size-new/size-new.component.html
@@ -10,7 +10,18 @@
     <button type="button" class="button special" (click)="closeModal()">Cancel</button>
   </div>
 </ng-template>
-
+<ng-template #nameInvalid>
+  <div class="modal-header">
+    <h4 class="modal-title">Agregar Producto</h4>
+  </div>
+  <div class="modal-body">
+    Ya existe un producto con ese nombre, elija uno diferente.
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="button special" (click)="closeModal()">Ok</button>
+    <button type="button" class="button special" (click)="closeModal()">Cancelar</button>
+  </div>
+</ng-template>
 <!-- Form -->
 <div class="animated fadeIn" *ngIf='size'>
   <div class="card card-cascade customHeightCard">
