--- a/src/styles.scss
+++ b/src/styles.scss
@@ -313,6 +313,8 @@ width: 100%!important;
     border-left: solid 1px lightgrey;
     background-color: #f6f6f6;
     
+}
+
 .customFooterModal {
     background-color: #eeeeee;
 }
