--- a/src/app/payment-type/payment-type-new/payment-type-new.component.html
+++ b/src/app/payment-type/payment-type-new/payment-type-new.component.html
@@ -10,7 +10,18 @@
     <button type="button" class="button special" (click)="closeModal()">Cancel</button>
   </div>
 </ng-template>
- 
+<ng-template #nameInvalid>
+  <div class="modal-header">
+    <h4 class="modal-title">Agregar Tama&ntilde;o</h4>
+  </div>
+  <div class="modal-body">
+    Ya existe un tama&ntilde;o con ese nombre, elija uno diferente.
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="button special" (click)="closeModal()">Ok</button>
+    <button type="button" class="button special" (click)="closeModal()">Cancelar</button>
+  </div>
+</ng-template>
 <!-- Form -->
 <div class="animated fadeIn" *ngIf='paymentType'>
   <div class="card card-cascade customHeightCard">
@@ -33,7 +44,7 @@
           <div class="modal-footer">
             <div class="options">
               <button class="btn btn-primary waves-light" type="button"  value="Cancel" (click)="showModalCancel(cancelTemplate)" mdbRippleRadius>Cancelar</button>
-              <button class="btn btn-primary waves-light" [disabled]="paymentTypeForm.invalid" type="button" value="Guardar" (click)="savePaymentType()" mdbRippleRadius>Aceptar</button>
+              <button class="btn btn-primary waves-light" [disabled]="paymentTypeForm.invalid" type="button" value="Guardar" (click)="validateName()" mdbRippleRadius>Aceptar</button>
             </div>
           </div>
         </form>
