--- a/src/app/section/section-list/section-list.component.html
+++ b/src/app/section/section-list/section-list.component.html
@@ -1,17 +1,32 @@
+<ng-template #openNewOrderTemplate>
+  <app-order-pre [selectedTable]="selectedTable" (close)="closeModal()"></app-order-pre>
+</ng-template>
+
+<ng-template #errorTemplate>
+  <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
+  </app-error-template>
+</ng-template>
+
 <!-- Nav tabs -->
 <div class="pageTitle">
-  <div style="float: left">
-      <header class="major">
-              <h5>{{ title }}</h5>
-      </header>
+  <div class="row">
+    <div class="col-md-9 col-lg-9 col-sm-9 pl-3">
+      <h5>{{ title }}</h5>
+    </div>
+
+    <div *ngIf="ordersActive === true" class="col-md-3 col-lg-3 col-sm-3 pr-5">
+      <input type="number" class="input-alternate" placeholder="Ir a mesa" 
+            name="tableNumber" [(ngModel)]='tableNumber' id="tableNumber"
+            (keydown.enter)="onKeyDownEnter($event)" min="0">
+    </div>
   </div>
 </div>
 <div class="col-md-12 col-lg-12 col-sm-12 row stylish-color customLinksColor mr-0 ml-0 pr-0 pl-0">
   <div class="col-md-7 col-lg-7 col-sm-7 mr-0 ml-0 pr-0 pl-0">
     <ul class="nav classic-tabs stylish-color customLinksColor" *ngIf='sections.length !== 0'>
       <li *ngFor='let section of sections; let i=index' class="nav-item customFirstLi">
-        <a class="waves-effect" id="{{ 'tab' + i }}" [routerLink] ="['tables', section._id]" routerLinkActive="active">
-              {{section.name}}
+        <a class="waves-effect" id="{{ 'tab' + i }}" [routerLink]="['tables', section._id]" routerLinkActive="active">
+          {{section.name}}
         </a>
       </li>
     </ul>
@@ -20,9 +35,8 @@
     <div class="float-right">
       <span class="badge badge-pill green">Libre</span>
       <span class="badge badge-pill red ">Ocupada</span>
-      <span class="badge badge-pill yellow customButtonText">Comandada</span>
       <span class="badge badge-pill blue">Reservada</span>
-    </div>      
+    </div>
   </div>
 </div>
 <!-- Tab panels -->
