Show combo to choose a cash register just when there is more than 1 available

--- a/src/app/cash-flows/cash-flows-new/cash-flows-new.component.html
+++ b/src/app/cash-flows/cash-flows-new/cash-flows-new.component.html
@@ -28,7 +28,7 @@
           El monto es un campo es requerido.
         </div>
 
-        <div class="form-group" [class.has-error]="showMessageCashRegister">
+        <div class="form-group" [class.has-error]="showMessageCashRegister" *ngIf="lengthCashRegister === true">
             <label>Caja:</label>
             <div class="select-wrapper">
               <select #cashFlowCashRegister="ngModel" required type="text" class="form-control browser-default" [class.is-invalid]="showMessageCashRegister" name="cashFlowCashRegister" 
