--- a/src/app/cash-register/cash-register-list/cash-register-list.component.html
+++ b/src/app/cash-register/cash-register-list/cash-register-list.component.html
@@ -48,8 +48,8 @@
                             <td>{{ cashRegister.available }}</td>
                             <td class="align-middle">
                                 <a [routerLink]="['/settings/general/cashRegisters', { outlets: { edit: ['editCashRegister', cashRegister._id] } }]"
-                                    class="btn btn-yellow btn-sm customButtonText">Editar</a>
-                                <a (click)="showModalDelete(deleteTemplate, cashRegister._id)" class="btn btn-red btn-sm">Eliminar</a>
+                                    class="btn btn-yellow btn-sm customButtonText">Editar</a>                                
+                                <button [disabled]="cashRegister.default === true" type="button" class="btn btn-red btn-sm" (click)="showModalDelete(deleteTemplate, cashRegister._id)">Eliminar</button>
                             </td>
                         </tr>
                     </tbody>
