--- a/src/app/payment-type/payment-type-edit/payment-type-edit.component.html
+++ b/src/app/payment-type/payment-type-edit/payment-type-edit.component.html
@@ -30,9 +30,17 @@
 
         <div class="form-group">
           <label class="custom-control custom-checkbox">
-            <input type="checkbox" formControlName="available" class="custom-control-input">
+            <input type="checkbox" formControlName="available" class="custom-control-input" (change)="handleClickAvailable()">
             <span class="custom-control-indicator"></span>
             <span class="custom-control-description">Disponible</span>
+          </label>
+        </div>
+
+        <div class="form-group">
+          <label class="custom-control custom-checkbox">
+            <input type="checkbox" formControlName="default" class="custom-control-input">
+            <span class="custom-control-indicator"></span>
+            <span class="custom-control-description">Tipo de pago por defecto</span>
           </label>
         </div>
 
