Added label to inform that the default cash register can not be deleted

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -324,3 +324,8 @@ width: 100%!important;
     padding-bottom: 1.5rem;
     white-space: pre-line;
 }
+
+.red-label {
+    color: rgba(184, 11, 11, 0.856);
+    font-weight: 600;    
+}
