--- a/src/app/section/section-list-config/section-list-config.component.html
+++ b/src/app/section/section-list-config/section-list-config.component.html
@@ -43,7 +43,7 @@
                     <td class="align-middle">
                         <a [routerLink]="['/settings/general/sections', { outlets: { edit: ['editSection', section._id] } }]" 
                             class="btn btn-yellow btn-sm customButtonText">Editar</a>
-                        <a (click) = "showModalDelete(deleteTemplate, section._id)" class="btn btn-red btn-sm">Eliminar</a>
+                        <a (click) = "validate(section._id)" class="btn btn-red btn-sm">Eliminar</a>
                     </td>
                 </tr>
             </tbody>
