Agrego estilo de seleccionar item en arqueo de cajas, arreglo subida de archivos y botones de product, categories y menus.

--- a/src/app/arqueo-caja/arqueo-caja-list/arqueo-caja-list.component.html
+++ b/src/app/arqueo-caja/arqueo-caja-list/arqueo-caja-list.component.html
@@ -18,8 +18,8 @@
             <a class="customFloatedButton" [routerLink]="['/sales/cash-counts', { outlets: { edit: ['newCashCount'] } }]"
                 class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius> + Nuevo Arqueo</a>
         </div>
-        <div class="row ml-1 mt-3">
-            <div class="col-md-8 col-lg-8 col-sm-8 pl-5 pr-5 pt-1 pb-2 mt-2 text-center">
+        <div class="row pl-0 pr-0 ml-0 mr-0 pt-0 heightThree">
+            <div class="col-md-8 col-lg-8 col-sm-8 pl-5 pr-5 pt-4 pb-2 mt-2 text-center">
                 <div class="row">
                     <table class="table table-bordered table-hover customTable">
                         <thead class="primary-color customTableText">
@@ -55,7 +55,7 @@
                     </table>
                 </div>
             </div>
-            <div class="col-md-4 col-lg-4 col-sm-4 mr-0 pr-5 pt-1 pb-2 mt-2">
+            <div class="col-md-4 col-lg-4 col-sm-4 mr-0 pr-5 pt-1 pb-2 mt-0 pt-2 outletGeneric">
                 <router-outlet name="edit" (deactivate)='reloadItems($event)'></router-outlet>
             </div>
         </div>
