--- a/src/app/product/product-new/product-new.component.html
+++ b/src/app/product/product-new/product-new.component.html
@@ -102,7 +102,7 @@
           </div>       
         </div> 
         <div class="col-md-6 pr-0 pl-0">
-            <img onerror="this.src='../../../assets/img/No_image_available.svg'"/>               
+            <img [src]="newProductPictureData" onerror="this.src='../../../assets/img/No_image_available.svg'"/>               
         </div>  
       </div>
       <div class="row col-md-12 col-lg-12 col-sm-12 mr-0">
