--- a/src/app/payment-type/payment-type-list/payment-type-list.component.html
+++ b/src/app/payment-type/payment-type-list/payment-type-list.component.html
@@ -23,6 +23,10 @@
             <span class="red-label">{{ cantDeleteDefaultPaymentTypeLabel }}</span>
         </div>
 
+        <div class="row mb-2 mt-2 ml-2" *ngIf="validationMessage !== 'undefined' && validationMessage !== null">
+            <span class="errorMessage">{{ validationMessage }}</span>
+        </div>
+
         <div class="ml-5 mr-5 pl-5 pr-5  pt-1 pb-2 mt-2 text-center">
             <div class="row mb-2 customBox">
                 <form #form="ngForm" novalidate class="form-inline col-md-12 col-lg-12">
