Arqueo New Estilos

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -314,6 +314,14 @@ width: 100%!important;
     background-color: #f6f6f6;
 }
 
+.outletTitle{
+    background-color: rgba(97, 97, 97, 0.25);
+    height: 2.5rem;
+    color: #5f5f5f;
+    padding-top: .4rem;
+    padding-left: .75rem;
+}
+
 .customFooterModal {
     background-color: #eeeeee;
 }
