--- a/src/app/arqueo-caja/arqueo-caja-new/arqueo-caja-new.component.html
+++ b/src/app/arqueo-caja/arqueo-caja-new/arqueo-caja-new.component.html
@@ -10,66 +10,73 @@
 </ng-template>
 
 <!-- Form -->
-<div class="container">
-  <header class="major" align="center">
-    <h2>Nuevo Arqueo de Caja</h2>
-  </header>
-  <div class="row">
-    <div class="col-md-6">
-      <form #form="ngForm" method="post" novalidate>
-
-        <div class="form-group">
-          <label>Hora de Apertura:</label>
-          <input #arqueoDateCreatedAt="ngModel" required type="date" class="form-control" [class.is-invalid]="arqueoDateCreatedAt.invalid && (arqueoDateCreatedAt.dirty || arqueoDateCreatedAt.touched)" name="arqueoDateCreatedAt" 
-                id="arqueoDateCreatedAt" [(ngModel)]="dateCreated_at">
-
-          <input #arqueoHourCreatedAt="ngModel" required type="time" class="form-control" [class.is-invalid]="arqueoHourCreatedAt.invalid && (arqueoHourCreatedAt.dirty || arqueoHourCreatedAt.touched)" name="arqueoHourCreatedAt" 
-                id="arqueoHourCreatedAt" [(ngModel)]="hourCreated_at">                
-        </div>
-
-        <div *ngIf="(arqueoDateCreatedAt.invalid && (arqueoDateCreatedAt.dirty || arqueoDateCreatedAt.touched)) || (arqueoHourCreatedAt.invalid && (arqueoHourCreatedAt.dirty || arqueoHourCreatedAt.touched))"
-             class="alert alert-danger">
-          La fecha es un campo es requerido.
-        </div>
-
-        <div class="form-group">
-          <label>Monto Inicial:</label>
-          <input #arqueoInitialAmount="ngModel" required type="number" class="form-control" [class.is-invalid]="arqueoInitialAmount.invalid && (arqueoInitialAmount.dirty || arqueoInitialAmount.touched)" name="arqueoInitialAmount" 
-                id="arqueoInitialAmount" [(ngModel)]="newArqueo.initialAmount">
-        </div>
-
-        <div *ngIf="arqueoInitialAmount.invalid && (arqueoInitialAmount.dirty || arqueoInitialAmount.touched)" class="alert alert-danger">
-          El monto inicial es un campo es requerido.
-        </div>
-
-        <div class="form-group" [class.has-error]="showMessageCashRegister" *ngIf="lengthCashRegister === true">
-            <label>Caja:</label>
-            <div class="select-wrapper">
-              <select #arqueoCashRegister="ngModel" required type="text" class="form-control browser-default" [class.is-invalid]="showMessageCashRegister" name="arqueoCashRegister" 
-                (blur)="validateCashRegister(arqueoCashRegister.value)"
-                (change)="validateCashRegister(arqueoCashRegister.value)"
-                id="arqueoCashRegister" [(ngModel)]="newArqueo.cashRegisterId">
-                <option value="default" default>Seleccione la caja...</option>
-                <option [value]="cashRegister._id" *ngFor = 'let cashRegister of cashRegisters'>{{ cashRegister.name }}</option>
-              </select>
-            </div>
-        </div>
-
-        <div *ngIf="showMessageCashRegister" class="alert alert-danger">
-          La Caja es requerida.
-        </div>   
-        
-        <div *ngIf="errorArqueo === true" class="alert alert-danger">
-          {{ errorMsg }}
-        </div>          
-
-        <div class="12u$">
-          <ul class="actions" align="center">
-            <li><input [disabled]="(form.invalid || hasCashRegister)" type="submit" value="Guardar" class="special" (click)="validate()"/></li>
-            <li><input type="button" value="Cancelar" (click)="showModalCancel(cancelTemplate)" /></li>
-          </ul>
-        </div>    
-      </form>
-    </div>
+<div class="col-12 pl-0 pr-0" style="height: 78vh;">
+  <div class="col-12 pr-0 outletTitle">
+    <h5>
+      {{pageTitle}}
+    </h5>
   </div>
+  <form #form="ngForm" method="post" novalidate>  
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Hora de Apertura:</label>
+        </div>
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <input #arqueoDateCreatedAt="ngModel" required type="date" class="form-control form-control-sm" [class.is-invalid]="arqueoDateCreatedAt.invalid && (arqueoDateCreatedAt.dirty || arqueoDateCreatedAt.touched)" name="arqueoDateCreatedAt" 
+                id="arqueoDateCreatedAt" [(ngModel)]="dateCreated_at" style="line-height: initial">
+        </div>
+        <div class="col-3 pl-0">
+          <input #arqueoHourCreatedAt="ngModel" required type="time" class="form-control form-control-sm" [class.is-invalid]="arqueoHourCreatedAt.invalid && (arqueoHourCreatedAt.dirty || arqueoHourCreatedAt.touched)" name="arqueoHourCreatedAt" 
+                id="arqueoHourCreatedAt" [(ngModel)]="hourCreated_at" style="line-height: initial">                
+        </div>
+      </div>
+      <div *ngIf="(arqueoDateCreatedAt.invalid && (arqueoDateCreatedAt.dirty || arqueoDateCreatedAt.touched)) || (arqueoHourCreatedAt.invalid && (arqueoHourCreatedAt.dirty || arqueoHourCreatedAt.touched))"
+           class="alert alert-danger mt-2">
+        La fecha es un campo es requerido.
+      </div>
+    </div>
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Monto Inicial:</label>
+        </div>  
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <i class="fa fa-dollar prefix"></i>
+          <input #arqueoInitialAmount="ngModel" required type="number" class="form-control form-control-sm" [class.is-invalid]="arqueoInitialAmount.invalid && (arqueoInitialAmount.dirty || arqueoInitialAmount.touched)" name="arqueoInitialAmount" 
+          id="arqueoInitialAmount" [ngModel]="newArqueo.initialAmount" (ngModelChange)="newArqueo.initialAmount=$event" name="inputField" style="margin-left: 1.5rem; width: calc(100% - 1.5rem);">
+        </div>    
+      </div>
+      <div *ngIf="arqueoInitialAmount.invalid && (arqueoInitialAmount.dirty || arqueoInitialAmount.touched)" class="alert alert-danger mt-2">
+          El monto inicial es un campo es requerido.
+      </div>
+    </div>
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+      <div class="row pl-2">
+        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+          <label>Caja:</label>
+        </div>  
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <mdb-select #arqueoCashRegister="ngModel" required type="text" (ngModelChange)="validateCashRegister(arqueoCashRegister.value)" [class.is-invalid]="showMessageCashRegister" name="arqueoCashRegister"
+          id="arqueoCashRegister" [(ngModel)]="newArqueo.cashRegisterId" (closed)="cashRegistersTouched = true"
+          [options]="cashRegistersSelect" placeholder="Seleccione la caja" class="mdbSelectClass">
+          </mdb-select>
+        </div>
+      </div>
+      <div *ngIf="showMessageCashRegister && cashRegistersTouched === true" class="alert alert-danger mt-2">
+        La Caja es requerida.
+      </div>   
+    </div>
+    <div class="col-12">
+      <div *ngIf="errorArqueo === true" class="alert alert-danger mt-2">
+          {{ errorMsg }}
+      </div>
+    </div>
+  </form>
 </div>
+<div class="col-12">
+  <div class="col-7 offset-5 closeOrderButton">
+    <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
+    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="(form.invalid || hasCashRegister)" (click)="validate()">{{saveButton}}</button>
+  </div>
+</div>    
